--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head> 
 	<meta charset="UTF-8" />
 	<title></title>
+    <script type="text/javascript" src="bower_components\jquery\dist\jquery.min.js"></script>
+    <script type="text/javascript" src="bower_components\bootstrap\dist\js\bootstrap.min.js"></script>
+    <script type="text/javascript" src="bower_components\phaser\build\phaser.min.js"></script>
     <script type="text/javascript" src="/eureca.js"></script>
+
     <script type="text/javascript" src="client/client.js"></script>
+
     <script type="text/javascript" src="client/objects/squad.js"></script>
     <script type="text/javascript" src="client/objects/player.js"></script>
     <script type="text/javascript" src="client/objects/fleat.js"></script>
@@ -19,14 +24,14 @@
     <script type="text/javascript" src="client/objects/pick.js"></script>
     <script type="text/javascript" src="client/objects/cards.js"></script>
     <script type="text/javascript" src="client/objects/gameController.js"></script>
+    <script type="text/javascript" src="client/objects/captain.js"></script>
+
+    <script type="text/javascript" src="client/lib/utils.js"></script>
+
     <script type="text/javascript" src="client/states/boot.js"></script>
     <script type="text/javascript" src="client/states/preload.js"></script>
     <script type="text/javascript" src="client/states/positionning.js"></script>
     <script type="text/javascript" src="client/states/game.js"></script>
-    <script type="text/javascript" src="client/lib/utils.js"></script>
-    <script type="text/javascript" src="bower_components\jquery\dist\jquery.min.js"></script>
-    <script type="text/javascript" src="bower_components\bootstrap\dist\js\bootstrap.min.js"></script>
-    <script type="text/javascript" src="bower_components\phaser\build\phaser.min.js"></script>
     
     <style type="text/css">
         body {
