--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="client/objects/cards.js"></script>
     <script type="text/javascript" src="client/objects/gameController.js"></script>
     <script type="text/javascript" src="client/objects/captain.js"></script>
+    <script type="text/javascript" src="client/objects/squadEffects.js"></script>
 
     <script type="text/javascript" src="client/lib/utils.js"></script>
 
